sonarqube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sonarqube

  template:
    metadata:
      labels:
        app: sonarqube

    spec:
      securityContext:
        fsGroup: 1000

      containers:
      - name: sonarqube
        image: sonarqube:lts-community

        ports:
        - containerPort: 9000

        resources:
          requests:
            cpu: "200m"
            memory: "1Gi"
          limits:
            cpu: "500m"
            memory: "2Gi"

        securityContext:
          runAsUser: 1000
          runAsGroup: 1000

        volumeMounts:
        - name: sonarqube-storage
          mountPath: /opt/sonarqube/data

      volumes:
      - name: sonarqube-storage
        persistentVolumeClaim:
          claimName: sonarqube-pvc
